--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
+      name="Arcade Shooter Browser Game"
       content="test-spaceship app"
     />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
